<resources>
    <string name="app_name">Vehicle Registration</string>

    <!-- Strings used for fragments for navigation -->
    <string name="vehicle_home_fragment_label">Vehicle Home</string>
    <string name="new_vehicle_label">Create new vehicle profile</string>
    <string name="vehicle_number_edittext_hint">For eg. MH12AB1234</string>
    <string name="vehicle_number">VEHICLE NUMBER</string>
    <string name="please_add_vehicles">Please add vehicles.</string>
    <string name="four_wheeler">Four-Wheeler</string>
    <string name="two_wheeler">Two-Wheeler</string>
    <string name="choose_vehicle_type">Choose Vehicle Type :</string>
    <string name="create_new_profile">Create new vehicle profile</string>
    <string name="vehicles">Vehicles</string>
    <string name="select_make">Select Make</string>
    <string name="select_model">Select Model</string>
    <string name="select_fuel">Select Fuel Type</string>
    <string name="select_transmission">Select Transmission</string>
    <string name="failure">Failure</string>
    <string name="success">Success</string>
    <string name="model">MODEL</string>
    <string name="make">MAKE</string>
    <string name="fuel_type">FUEL TYPE</string>
    <string name="transmission">TRANMISSION</string>
    <string name="vehicle_details">Vehicle Details</string>

</resources>