<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.VehicleRegisterFragment">

    <TextView
        android:id="@+id/header_text"
        android:text="@string/vehicle_number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/vehicle_item_title_size"
        android:textColor="@color/black"
        android:layout_margin="@dimen/generic_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/vehicle_no_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_text"
        android:layout_margin="@dimen/generic_margin"
        android:hint="@string/vehicle_number_edittext_hint"/>

    <TextView
        android:id="@+id/vehicle_type_text"
        android:text="@string/choose_vehicle_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vehicle_no_edit_text"
        android:textSize="@dimen/vehicle_item_title_size"
        android:textColor="@color/black"
        android:layout_margin="@dimen/generic_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        app:layout_constraintTop_toBottomOf="@id/vehicle_type_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="@dimen/generic_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/twoWheeler"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/two_wheeler"
            android:checked="true"
            android:textSize="@dimen/vehicle_item_title_size" />

        <RadioButton
            android:id="@+id/fourWheeler"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/four_wheeler"
            android:checked="false"
            android:textSize="@dimen/vehicle_item_title_size" />
    </RadioGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:src="@drawable/arrow_right_32"
        app:tint="@android:color/white"
        android:layout_margin="@dimen/generic_margin_2"
        app:fabSize="normal"
        app:maxImageSize="@dimen/fab_icon_size"
        android:layout_gravity="end|bottom"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>